--- a/www/templates/infoquery/address-list.html
+++ b/www/templates/infoquery/address-list.html
@@ -9,11 +9,11 @@
 		
 		<div class="list">
 			<div class="item" ng-repeat="x in addlist">
-				<div>id {{x.id}}</div>
-				<div>deviceId {{x.deviceId}}</div>
-				<div>latitude {{x.latitude}}</div>
-				<div>longitude {{x.longitude}}</div>
-				<div>csq {{x.csq}}</div>
+				<div>设备编号{{x.deviceId}}</div>	
+				<div>经度{{x.longitude}}</div>
+				<div>维度{{x.latitude}}</div>
+				<div>信号强度{{x.csq}}</div>
+				<div>体温{{x.bodyTem}}</div>
 			</div>
 		</div>
 		
