--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view>
 	<ion-content style="background-image:url(img/bg2.jpg);background-size:cover;">
-	 
-    <div class="content has-header">
+	<div class="titlemy"><h1>牧群管理系统</h1></div> 
+    <div style="margin-top: 100px;">
       <div class="list list-inset">
         <label class="item item-input">
           <i class="ion-android-person"></i>
