--- a/www/templates/tab-infoquery.html
+++ b/www/templates/tab-infoquery.html
@@ -6,11 +6,14 @@
 </ion-header-bar>
 <ion-view>
 	<ion-content scroll="false">
-		<div id="area" class="areadiv">
+		<!--<div id="area" class="areadiv">
 			<img ng-repeat="item in addPingmlist"
 			style="position:relative;left:{{item.xcoord}}px;top:{{item.ycoord}}px;"
 			src="img/yang.png"/>
-		</div>
-		
+		</div>-->
+		<canvas id="area" class="areadiv">
+				Your browser does not support the canvas element.
+		</canvas>
+
 	</ion-content>
 </ion-view>
