--- a/www/templates/mine/change-pass.html
+++ b/www/templates/mine/change-pass.html
@@ -6,7 +6,7 @@
 </ion-header-bar>
 <ion-view>
 	<ion-content>
-		<!--<div class="list">
+		<div class="list">
 			<div class="item">旧密码
 				<div class="insty"><input type="password" ng-model="passobj.oldPwd" placeholder="请输入旧密码"/></div>
 			</div>
@@ -19,11 +19,9 @@
 		</div>
 		<div class="">
 			<a ng-click="changepass()" class="button button-balanced button-block">提交</a>
-		</div>-->
+		</div>
 		
-		<canvas id="myCanvas" width="200" height="100" style="border:1px solid #c3c3c3;">
-			Your browser does not support the canvas element.
-		</canvas>
+		
 		
 
 	</ion-content>
