--- a/www/templates/infoquery/address-list.html
+++ b/www/templates/infoquery/address-list.html
@@ -15,6 +15,8 @@
 				<div><span>经度:</span>{{x.longitude}}<span style="padding-left:35px;">维度:</span>{{x.latitude}}</div>
 			</div>
 		</div>
+		<ion-infinite-scroll ng-if="state" on-infinite="loadMore()" distance="1%">
+		</ion-infinite-scroll>
 		
 	</ion-content>
 </ion-view>
