--- a/www/css/style.css
+++ b/www/css/style.css
@@ -39,7 +39,7 @@
 /*公共end----------------------------------------------------------*/
 .qd{
 	text-align: center;
-	margin:50px 0px 100px 0px;
+	margin:10px 0px;
 }
 .qd button{
 	height:45px;
