--- a/www/templates/tab-infoquery.html
+++ b/www/templates/tab-infoquery.html
@@ -6,6 +6,9 @@
 </ion-header-bar>
 <ion-view>
 	<ion-content scroll="false">
+		<div class="qd">
+		<button ng-click="qd()" class="button button-small button-outline button-balanced">签到</button>
+		</div>
 		<!--<div id="area" class="areadiv">
 			<img ng-repeat="item in addPingmlist"
 			style="position:relative;left:{{item.xcoord}}px;top:{{item.ycoord}}px;"
