--- a/www/templates/tab-mine.html
+++ b/www/templates/tab-mine.html
@@ -3,9 +3,9 @@
 </ion-header-bar>
 <ion-view>
 	<ion-content>	
-		<div class="qd">
+		<!--<div class="qd">
 		<button ng-click="qd()" class="button button-small button-outline button-balanced">签到</button>
-		</div>
+		</div>-->
 		<div class="list padding">
 			<a class="item item-icon-left item-icon-right" href="#/changePass">
 				<i class="icon ion-wrench"></i>修改密码
