--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,7 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-balanced">
   <!-- Chats Tab -->
-  <ion-tab title="羊群监控" icon-off="ion-clipboard" icon-on="ion-clipboard" href="#/tab/infoquery">
+  <ion-tab title="牲畜监控" icon-off="ion-clipboard" icon-on="ion-clipboard" href="#/tab/infoquery">
     <ion-nav-view name="tab-infoquery"></ion-nav-view>
   </ion-tab>
 
