--- a/www/templates/tab-infoquery.html
+++ b/www/templates/tab-infoquery.html
@@ -9,14 +9,8 @@
 		<div class="qd">
 		<button ng-click="qd()" class="button button-small button-outline button-balanced">签到</button>
 		</div>
-		<!--<div id="area" class="areadiv">
-			<img ng-repeat="item in addPingmlist"
-			style="position:relative;left:{{item.xcoord}}px;top:{{item.ycoord}}px;"
-			src="img/yang.png"/>
-		</div>-->
-		<canvas id="area" class="areadiv">
-				Your browser does not support the canvas element.
-		</canvas>
+		
+		<sheepcanvas current-sheeps="currentSheeps"></sheepcanvas>
 
 	</ion-content>
 </ion-view>
