--- a/www/templates/tab-mine.html
+++ b/www/templates/tab-mine.html
@@ -6,7 +6,7 @@
 		<!--<div class="qd">
 		<button ng-click="qd()" class="button button-small button-outline button-balanced">签到</button>
 		</div>-->
-		<div class="list padding">
+		<div class="list padding" style="margin-top:80px;">
 			<a class="item item-icon-left item-icon-right" href="#/changePass">
 				<i class="icon ion-wrench"></i>修改密码
 				<i class="icon ion-ios-arrow-right"></i>
